# CWebServer

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: pre-commit.yml
DataStructures/Common/: Node.c  Node.h
DataStructures/Dictionary/: Dictionary.c  Dictionary.h  Entry.c  Entry.h
DataStructures/Lists/: LinkedList.c  LinkedList.h  Queue.c  Queue.h
DataStructures/Trees/: BinarySearchTree.c  BinarySearchTree.h
Networking/Nodes/: Client.c  Client.h  HTTPServer.c  HTTPServer.h  Server.c  Server.h
Networking/Protocols/: HTTPRequest.c  HTTPRequest.h
System/: ThreadPool.c  ThreadPool.h
test/: main.c
